--- a/frontend/.env
+++ b/frontend/.env
@@ -1,1 +1,2 @@
 REACT_APP_API_URL=https://event-booking-system-dwxq.onrender.com/api
+REACT_APP_PAYPAL_CLIENT_ID=AczBILvob5NjfUsWVjnqYucR3hp35xEH-sOYu0thsdsN6CSbQw5s5SAAFKEFVYCJS0enxJvAkXqfADK8
